--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -1,4 +1,4 @@
-@import "../css/vendors/normalize.css";
+@import "../../vendors/css/normalize.css";
 @import "./libs/vars";
 @import "./libs/mixins";
 @import "./base/fonts";
