--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -1,13 +1,14 @@
 * {
   box-sizing: border-box;
+  color: white;
 }
-body{
+body {
   height: 100vh;
 }
 .container {
-  padding: 2% 4%;
-  @media screen and (max-width: $mobileBreakPoint) {
-    padding: 5% 5%;
+  padding: 0 7%;
+  @media screen and (min-width: $mobileBreakPoint) {
+    padding: 0 4%;
   }
 }
 
@@ -24,4 +25,38 @@ body{
     min-width: unset;
     width: 30vw;
   }
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.logo {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.link {
+  font-size: $veryShortFontSize + 10!important;
+  padding: $veryShortSpacing $veryShortSpacing !important;
+  margin-left: $veryShortSpacing !important;
+  text-align: center;
+  &:hover {
+    color: $gray;
+  }
+}
+.greenButton {
+  background: $green !important;
+  border-radius: $lightBorderRadius !important;
+  color: white;
+  
+  font-weight: $semiBoldBodyFontWeight;
+}
+
+h1 {
+  font-size: $normalHeadingsFontSize;
+  text-align: center;
 }
