--- a/resources/sass/base/_fonts.scss
+++ b/resources/sass/base/_fonts.scss
@@ -1,10 +1,26 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Raleway:700&display=swap");
+
 html {
   font-size: 16px;
 }
 body {
   font-family: $openSansFontFamily;
 }
-h1 {
-  font-family: $poppinsFontFamily;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: $raleWayFontFamily;
+  font-weight: $headingsFontWeight;
+}
+
+h2 {
+  font-size: $smallHeadingsFontSize + -10;
+}
+
+p {
+  font-size: $shortFontSize;
+  line-height: $normalLineHeight;
 }
