--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -1,32 +1,69 @@
-.header {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  .header__tryItButton {
+header {
+  position: relative;
+  overflow: hidden;
+  height: 570px;
+  .header__background {
+    background: linear-gradient(160deg,$veryDarkBlue ,$darkBlue, $softBlue);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100% !important;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    transform: skewY(10deg);
+    transform-origin: top right;
+    z-index: -1;
+  }
+  nav {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    color: $pink;
-    text-decoration: none;
-    width: 10vw;
-    max-width: 150px;
-    min-width: 120px;
-    text-align: center;
-    border: 1px solid $pink;
-    border-radius: $lightBorderRadius;
-    font-size: 85%;
-    transition: all 0.5s ease;
-    padding: 3px;
-    text-transform: capitalize;
-    &:hover {
-      color: white;
-      background-color: $pink;
+    justify-content: space-between;
+    padding: $shortSpacing 0;
+    > a {
+      width: 50%;
     }
-    @media screen and (max-width: $mobileBreakPoint) {
-    min-width: unset;
-    width: 30vw;
+    .logo {
+      img {
+        width: 50%;
+        height: auto;
+      }
+    }
+    .header__links {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 50%;
+      a {
+        display: inline-block;
+        width: 90% !important;
+        margin-left: $veryShortSpacing;
+      }
+    }
+  }
+  section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: $normalSpacing 0;
+    * {
+      margin: $littleShortSpacing;
+    }
+    .header__image {
+      background: url(/vendors/images/illustration-hero.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      width: 100% !important;
+      height: 170px;
+    }
+    .link {
+      font-weight: $semiBoldBodyFontWeight;
+      width: 50%;
+      padding: $littleShortSpacing $shortSpacing !important;
     }
   }
 }
