--- a/resources/sass/components/_main.scss
+++ b/resources/sass/components/_main.scss
@@ -1,198 +1,80 @@
-// headers
-.mainSection__header {
-  font-weight: $boldFontWeight;
-  text-transform: capitalize;
-  width: 100%;
-  font-size: 225%;
-  text-align: center;
-  margin: 16px 0;
-  @media screen and (max-width: $mobileBreakPoint) {
-    font-size: 140%;
-  }
-}
-// sections
-.mainSection section {
-  width: 100%;
-  margin: 25px 0;
-}
-
-// mainSection
-.mainSection {
+main {
+  margin: $normalSpacing 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   * {
-    color: $veryDarkCyan;
+    color: $gray;
   }
   p {
-    color: $grayishBlue;
-    font-size: 100%;
-    text-align: center;
+    font-weight: $regularBodyFontWeight;
   }
-}
-
-// buttons
-.getStartedButton {
-  color: white;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: lighten($pink, 5%);
-  border-radius: $lightBorderRadius;
-  font-size: 80%;
-  text-transform: capitalize;
-  padding: 1% 2%;
-  width: 20%;
-  min-width: 150px;
-  min-height: 40px;
-  text-decoration: none;
-  transition: all 0.5s ease;
-  &:hover {
-    background: $pink;
-    -webkit-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.7);
-    -moz-box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 0px 12px -2px rgba(0, 0, 0, 0.7);
-  }
-  @media screen and (max-width: $mobileBreakPoint) {
-    font-size: 75%;
-    padding: 3% 6%;
-    width: 50%;
-    min-width: 50%;
-  }
-}
-
-// mainsection intro
-.mainSection__introduction {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  p {
-    width: 60%;
-  }
-  @media screen and (max-width: $mobileBreakPoint) {
-    p {
-      width: 80%;
-      font-size: 90%;
-      line-height: 1.5;
-    }
-  }
-}
-.mainSection__introduction__image {
-  background-size: contain !important;
-  background-repeat: no-repeat !important;
-  background-position: center !important;
-  margin-top: 25px;
-  width: 80%;
-  height: 450px;
-  @media screen and (max-width: $mobileBreakPoint) {
-    margin-top: 0;
-    height: 200px;
-  }
-  @media screen and (max-width: 750px) {
-    height: 300px;
-  }
-  @media screen and (max-width: 450px) {
-    height: 250px;
-  }
-}
-
-.mainSection__details {
-  display: grid;
-  width: 100%;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: auto;
-  height: auto;
-  grid-column-gap: 10px;
-  grid-row-gap: 45px;
-  div {
-    width: 100% !important;
-  }
-  * {
-    text-align: start;
-  }
-.mainSection__details__decription{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-}
+  h1,
   h2 {
-    font-size: 120%;
-    width: 70%;
-    margin-bottom: 10px!important;
+    color: $veryDarkBlue;
   }
-  p {
-    margin-bottom: 25px!important;
-    font-size: 90%;
-    line-height: 1.4;
-    width: 70%;
-    text-align: start;
+  h1 {
+    text-align: center;
+    text-transform: capitalize;
+    line-height: $normalLineHeight;
+    font-size: $normalHeadingsFontSize + -5;
   }
-  @media screen and (max-width: 768px) {
-    h2 {
-      font-size: 2.6vw;
-      width: 90%;
-    }
-    p {
-      font-size: 1.9vw;
-      width: 80%;
-      text-align: start;
-    }
-  }
-  @media screen and (max-width: 590px) {
+
+  .main__introduction {
+    display: grid;
     grid-template-columns: auto;
-    div:first-child {
-      grid-row: 2;
-    }
-    div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h2 {
-      font-size: 3.7vw;
-      text-align: center;
-    }
-    p {
-      font-size: 2.9vw;
-      text-align: center;
-    }
-    .mainSection__details__image {
-      margin: 0 auto !important;
-      width: 80%;
-      height: 250px;
+    > h1,
+    img,
+    section {
+      margin: $lightSpacing 0;
     }
   }
-  @media screen and (max-width: 425px) {
-    h2 {
-      font-size: 4.4vw;
-    }
-    p {
-      font-size: 3.4vw;
-    }
+  img {
+    width: 50%;
+    height: auto;
+    margin-left: auto !important;
+    margin-right: auto !important;
   }
-  @media screen and (max-width: $mobileBreakPoint) {
-    h2 {
-      font-size: 5.8vw;
-      width: 90%;
-    }
-    p {
-      font-size: 4.2vw;
-    }
-  }
-}
-.mainSection__details__image {
-  background-size: contain !important;
-  background-repeat: no-repeat !important;
-  background-position: center !important;
 }
 
-// get started section
-.mainSection__getStarted{
+.main__introduction__details {
+  article {
+    margin: ($lightSpacing + 10) 0;
+  }
+}
+
+.main__signUp {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
-  *{margin: 15px 0;}
-  a{text-align: center;}
+  h1 {
+    margin: $littleShortSpacing 0;
+  }
+  p {
+    text-align: center;
+    color: $darkBlue;
+    font-weight: $semiBoldBodyFontWeight;
+    margin: ($shortSpacing + -5) 0;
+    width: 90%;
+  }
+  form {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    * {
+      -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.144);
+      width: 100%;
+      height: 45px;
+      margin: $littleShortSpacing 0 !important;
+      padding: 0 !important;
+      border: none;
+      outline: none;
+    }
+    input {
+      padding: $veryShortSpacing ($shortSpacing + 10) !important;
+      font-size: $shortFontSize;
+    }
+  }
 }
