--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -149,7 +149,7 @@ header section * {
   margin: 10px;
 }
 header section .header__image {
-  background: url(/vendors/images/illustration-hero.svg);
+  background: url(/Fylo-landing-page-with-features-grid-section/vendors/images/illustration-hero.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -189,13 +189,17 @@ main .main__introduction {
   grid-template-columns: auto;
 }
 main .main__introduction > h1,
-main .main__introduction img,
+main .main__introduction div,
 main .main__introduction section {
   margin: 25px 0;
 }
-main img {
-  width: 50%;
-  height: auto;
+main .main__introduction__featuresImage {
+  background: url(/Fylo-landing-page-with-features-grid-section/vendors/images/illustration-features.svg);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100% !important;
+  height: 175px;
   margin-left: auto !important;
   margin-right: auto !important;
 }
