--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -19,12 +19,12 @@ h6 {
 }
 
 h2 {
-  font-size: 95%;
+  font-size: 100%;
 }
 
 p {
-  font-size: 78%;
-  line-height: 1.7;
+  font-size: 86%;
+  line-height: 1.6;
 }
 
 * {
@@ -66,6 +66,9 @@ a {
   text-decoration: none;
   color: white;
 }
+a:hover, a:active {
+  text-decoration: underline !important;
+}
 
 .logo img {
   width: 100%;
@@ -92,6 +95,28 @@ a {
 h1 {
   font-size: 135%;
   text-align: center;
+}
+
+.signUpForm {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.signUpForm * {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.144);
+  width: 100%;
+  height: 45px;
+  margin: 10px 0 !important;
+  padding: 0 !important;
+  border: none;
+  outline: none;
+}
+.signUpForm input {
+  padding: 5px 30px !important;
+  font-size: 78%;
+  border-radius: 2.5px !important;
 }
 
 header {
@@ -223,25 +248,76 @@ main .main__introduction__featuresImage {
   margin: 15px 0;
   width: 90%;
 }
-.main__signUp form {
+
+footer {
+  position: relative;
+  overflow: hidden;
+  min-height: 800px;
+}
+footer .footer__background {
+  background: #070439;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100% !important;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  transform: skewY(10deg);
+  transform-origin: top left;
+  z-index: -1;
+}
+footer .footer {
+  display: grid;
+  grid-template-rows: auto;
+  grid-row-gap: 25px;
+  margin: 100px 20px;
+}
+footer .footer .footer__details .logo {
+  display: inline-block;
+  width: 45% !important;
+  height: auto;
+  margin: 40px 0;
+}
+footer .footer .footer__details div {
+  margin: 20px 0;
   display: flex;
-  flex-direction: column;
-  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  font-size: 88%;
 }
-.main__signUp form * {
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.144);
-  width: 100%;
-  height: 45px;
-  margin: 10px 0 !important;
-  padding: 0 !important;
-  border: none;
-  outline: none;
+footer .footer .footer__details div img {
+  margin-right: 15px;
 }
-.main__signUp form input {
-  padding: 5px 30px !important;
-  font-size: 78%;
+footer .footer section:nth-of-type(3) {
+  grid-row: 2;
+}
+footer .footer section:nth-of-type(3) p {
+  margin: 35px 0;
+  font-size: 100%;
+  text-align: center;
+}
+footer .footer section:nth-of-type(3) .signUpForm button {
+  width: 60%;
+  align-self: flex-end;
+}
+
+.footer__navBar div {
+  margin: 40px 0;
+}
+.footer__navBar h3 {
+  font-size: 105%;
+  margin: 25px 0;
+}
+.footer__navBar ul {
+  list-style: none;
+  padding: 0;
+}
+.footer__navBar ul li {
+  font-size: 73%;
+  margin: 15px 0;
 }
 
 /*# sourceMappingURL=main.css.map */
