--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -30,6 +30,9 @@ body {
 a {
   text-decoration: none;
   color: white;
+  &:hover,&:active{
+    text-decoration: underline!important;
+  }
 }
 
 .logo {
@@ -59,4 +62,27 @@ a {
 h1 {
   font-size: $normalHeadingsFontSize;
   text-align: center;
+}
+
+.signUpForm {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  * {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.144);
+    width: 100%;
+    height: 45px;
+    margin: $littleShortSpacing 0 !important;
+    padding: 0 !important;
+    border: none;
+    outline: none;
+  }
+  input {
+    padding: $veryShortSpacing ($shortSpacing + 10) !important;
+    font-size: $shortFontSize;
+  border-radius: $lightBorderRadius !important;
+
+  }
 }
