--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -33,6 +33,7 @@ p {
 }
 
 body {
+  font-size: 100%;
   height: 100vh;
 }
 
@@ -122,7 +123,7 @@ h1 {
 header {
   position: relative;
   overflow: hidden;
-  height: 570px;
+  height: 108vh;
 }
 header .header__background {
   background: linear-gradient(160deg, #070439, #282385, #bbb8fa);
@@ -135,7 +136,7 @@ header .header__background {
   bottom: 0;
   right: 0;
   left: 0;
-  transform: skewY(10deg);
+  transform: skewY(7deg);
   transform-origin: top right;
   z-index: -1;
 }
@@ -147,6 +148,7 @@ header nav {
 }
 header nav > a {
   width: 50%;
+  max-width: 210px;
 }
 header nav .logo img {
   width: 50%;
@@ -156,35 +158,108 @@ header nav .header__links {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 50%;
 }
 header nav .header__links a {
   display: inline-block;
   width: 90% !important;
+  max-width: 90px !important;
   margin-left: 5px;
+}
+@media screen and (min-width: 768px) {
+  header nav {
+    padding-top: 30px;
+  }
+  header nav > a {
+    width: 23% !important;
+  }
+  header nav .header__links {
+    justify-content: flex-end;
+    width: 20% !important;
+    min-width: 200px;
+  }
+  header nav .header__links .link {
+    display: inline-block;
+    width: 35% !important;
+    padding: 0.6em !important;
+  }
 }
 header section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 70px 0;
+  height: 110vh;
+  margin: 30px 0;
 }
 header section * {
   margin: 10px;
 }
 header section .header__image {
-  background: url(/Fylo-landing-page-with-features-grid-section/vendors/images/illustration-hero.svg);
+  background: url(/vendors/images/illustration-hero.svg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   width: 100% !important;
-  height: 170px;
+  height: 34%;
 }
 header section .link {
   font-weight: 600;
   width: 50%;
   padding: 10px 20px !important;
+}
+header section div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media screen and (min-width: 375px) {
+  header section {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    margin: 35px 0;
+    height: 55vh;
+  }
+  header section > div {
+    width: 50% !important;
+    height: 100%;
+  }
+  header section .header__image {
+    height: 100%;
+    width: 50% !important;
+  }
+  header section .link {
+    width: 35%;
+    min-width: 125px;
+  }
+  header section div:nth-of-type(2) {
+    justify-content: center;
+    align-items: flex-start;
+  }
+  header section div:nth-of-type(2) h1 {
+    text-align: start;
+    font-size: 1.3em;
+    line-height: 1.3;
+    margin-bottom: 35px;
+  }
+  header section div:nth-of-type(2) br {
+    display: none;
+  }
+}
+@media screen and (min-width: 375px) and (min-width: 1208px) {
+  header section div:nth-of-type(2) h1 {
+    font-size: 1.9em;
+  }
+}
+@media screen and (min-width: 375px) {
+  header {
+    height: 100vh;
+  }
+}
+@media screen and (min-width: 768px) {
+  header {
+    height: 105vh;
+  }
 }
 
 main {
@@ -219,7 +294,7 @@ main .main__introduction section {
   margin: 25px 0;
 }
 main .main__introduction__featuresImage {
-  background: url(/Fylo-landing-page-with-features-grid-section/vendors/images/illustration-features.svg);
+  background: url(/vendors/images/illustration-features.svg);
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
