--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -3,6 +3,7 @@
   color: white;
 }
 body {
+  font-size: 100%;
   height: 100vh;
 }
 .container {
@@ -30,8 +31,9 @@ body {
 a {
   text-decoration: none;
   color: white;
-  &:hover,&:active{
-    text-decoration: underline!important;
+  &:hover,
+  &:active {
+    text-decoration: underline !important;
   }
 }
 
@@ -43,7 +45,7 @@ a {
 }
 
 .link {
-  font-size: $veryShortFontSize + 10!important;
+  font-size: $veryShortFontSize + 10 !important;
   padding: $veryShortSpacing $veryShortSpacing !important;
   margin-left: $veryShortSpacing !important;
   text-align: center;
@@ -55,7 +57,7 @@ a {
   background: $green !important;
   border-radius: $lightBorderRadius !important;
   color: white;
-  
+
   font-weight: $semiBoldBodyFontWeight;
 }
 
@@ -82,7 +84,6 @@ h1 {
   input {
     padding: $veryShortSpacing ($shortSpacing + 10) !important;
     font-size: $shortFontSize;
-  border-radius: $lightBorderRadius !important;
-
+    border-radius: $lightBorderRadius !important;
   }
 }
