--- a/resources/sass/libs/_vars.scss
+++ b/resources/sass/libs/_vars.scss
@@ -40,3 +40,6 @@ $veryShortSpacing: 5px;
 // lineHeights
 
 $normalLineHeight: 1.7;
+
+// url subdirectory
+$fylo:Fylo-landing-page-with-features-grid-section;
