--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -72,7 +72,7 @@ header {
       margin: $littleShortSpacing;
     }
     .header__image {
-      background: url(/vendors/images/illustration-hero.svg);
+      background: url("/$fylo/vendors/images/illustration-hero.svg");
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
@@ -103,6 +103,7 @@ header {
         width: 50% !important;
       }
       .link {
+        font-size: 95% !important;
         width: 35%;
         min-width: 125px;
       }
@@ -112,7 +113,7 @@ header {
         align-items: flex-start;
         h1 {
           text-align: start;
-          font-size: 1.3em;
+          font-size: 1.6em;
           line-height: 1.3;
           margin-bottom: $lightSpacing + 10;
         }
@@ -121,7 +122,7 @@ header {
         }
         @media screen and (min-width: 1208px) {
           h1 {
-            font-size: 2.5em;
+            font-size: 2.3em;
           }
         }
       }
@@ -129,9 +130,9 @@ header {
   }
 
   @media screen and (min-width: $mobileBreakPoint) {
-    height: 100vh;
+    height: 90vh;
   }
   @media screen and (min-width: $tabletBreakPoint) {
-    height: 105vh;
+    height: 99vh;
   }
 }
