--- a/resources/sass/libs/_vars.scss
+++ b/resources/sass/libs/_vars.scss
@@ -42,4 +42,4 @@ $veryShortSpacing: 5px;
 $normalLineHeight: 1.7;
 
 // url subdirectory
-$fylo:Fylo-landing-page-with-features-grid-section;
+$fylo:'Fylo-landing-page-with-features-grid-section';
