--- a/resources/sass/components/_footer.scss
+++ b/resources/sass/components/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   position: relative;
   overflow: hidden;
-  min-height: 800px;
+  // min-height: 800px;
   .footer__background {
     background: $veryDarkBlue;
     background-size: cover;
@@ -13,7 +13,7 @@ footer {
     bottom: 0;
     right: 0;
     left: 0;
-    transform: skewY(10deg);
+    transform: skewY(7deg);
     transform-origin: top left;
     z-index: -1;
   }
@@ -94,6 +94,7 @@ footer {
         max-width: 450px;
         align-items: center !important;
         button {
+          width: 100% !important;
           align-self: center !important;
         }
       }
@@ -107,10 +108,11 @@ footer {
   .footer__navBar {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
     div {
       width: auto;
+      margin: 0 auto;
       // display: flex;
       // flex-direction: column;
       // align-items: center;
@@ -119,23 +121,94 @@ footer {
 }
 
 @media screen and (min-width: $tabletBreakPoint) {
-  .footer {
-    grid-template-columns: auto auto auto;
+  footer {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    // min-height: 600px!important;
+    padding: ($normalSpacing + 75) 0 50px 0 !important;
+
+    .footer {
+      grid-template-columns: 25% 45% 30%;
+      margin: 8% 0 4% 0;
+      // max-height: 175px !important;
+      width: 100% !important;
+      section {
+        width: 100%;
+        height: 100%;
+      }
+      section:nth-of-type(1) {
+        border-right: 1px solid white;
+        padding-right: $lightSpacing;
+      }
+      section:nth-of-type(2) {
+        // margin: 0 $lightSpacing;
+        div {
+          margin: 0 $littleShortSpacing;
+          h3 {
+            margin-top: 0;
+          }
+        }
+      }
+      section:nth-of-type(3) {
+        grid-row: 1 !important;
+        grid-column: 3;
+        border-left: 1px solid white;
+        padding-left: $lightSpacing;
+        justify-content: space-evenly;
+        p {
+          margin: 0 0  15px 0;
+        }
+        form,
+        p {
+          width: 90%;
+          text-align: start;
+        }
+        form {
+          button {
+            align-self: flex-end !important;
+            width: 60% !important;
+          }
+        }
+      }
+      .footer__navBar {
+        justify-content: space-evenly;
+        min-width: 275px;
+        width: 100%;
+        height: 100%;
+        div {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          height: 100%;
+          h3 {
+            height: 10%;
+            margin: 0;
+          }
+          ul {
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: space-between;
+            margin: auto 0;
+            height: 85%;
+            li{margin: 30px 0;}
+            // li:nth-of-type(1){
+            //   justify-self: flex-start!important;
+            // }
+          }
+        }
+      }
+      .footer__details {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          width: 100%;
+          .logo {
+            margin: $littleShortSpacing 0;
+            width: 95% !important;
+            max-width: 200px;
+          }
+      }
+    }
   }
-}
-section:nth-of-type(1){
-  border-right: 1px solid white;
-  padding-right: $lightSpacing;
-}
-section:nth-of-type(2){
-  margin: 0 $lightSpacing;
-  div{
-    margin: 0 $littleShortSpacing;
-    h3{margin-top: 0;}
-  }
-}
-section:nth-of-type(3){
-  grid-row: 1!important;
-  grid-column: 3;
-  border-left: 1px solid white;
 }
