--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -123,7 +123,7 @@ h1 {
 header {
   position: relative;
   overflow: hidden;
-  height: 108vh;
+  height: 600px;
 }
 header .header__background {
   background: linear-gradient(160deg, #070439, #282385, #bbb8fa);
@@ -189,7 +189,7 @@ header section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 110vh;
+  height: 500px;
   margin: 30px 0;
 }
 header section * {
@@ -218,7 +218,7 @@ header section div:nth-of-type(2) {
     flex-direction: row-reverse;
     justify-content: space-between;
     margin: 35px 0;
-    height: 55vh;
+    height: 75%;
   }
   header section > div {
     width: 50% !important;
@@ -254,12 +254,17 @@ header section div:nth-of-type(2) {
 }
 @media screen and (min-width: 375px) {
   header {
-    height: 90vh;
+    height: 500px;
   }
 }
 @media screen and (min-width: 768px) {
   header {
-    height: 99vh;
+    height: 550px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  header {
+    height: 625px;
   }
 }
 
