--- a/resources/sass/components/_header.scss
+++ b/resources/sass/components/_header.scss
@@ -136,6 +136,13 @@ header {
     height: 550px;
   }
   @media screen and (min-width: 1200px) {
+    .header {
+        section {
+          h1 {
+          width: 90%;
+          }
+        }
+    }
     height: 625px;
   }
 }
