--- a/resources/sass/components/_main.scss
+++ b/resources/sass/components/_main.scss
@@ -1,8 +1,15 @@
 main {
   margin: $normalSpacing 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   * {
     color: $gray;
   }
@@ -21,8 +28,13 @@ main {
   }
 
   .main__introduction {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     > h1,
     div,
     section {
@@ -48,9 +60,16 @@ main {
 }
 
 .main__signUp {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   h1 {
     margin: $littleShortSpacing 0;
   }
@@ -66,14 +85,21 @@ main {
 //media queries
 @media screen and (min-width: $mobileBreakPoint) {
   main {
-    justify-content: space-around;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     margin: $lightSpacing 0;
     // height: 180% !important;
     // min-height: 900px !important;
     h1 {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
       font-size: 1.3em !important;
     }
   }
@@ -82,9 +108,16 @@ main {
     // margin: $shortSpacing 0;
   }
   .main__details__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 95%;
     // margin: $shortSpacing 0!important;
     // overflow: hidden;
@@ -137,7 +170,10 @@ main {
     }
   }
   .main__details__container {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     width: 100%;
     div {
       width: 40% !important;
